--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,7 +502,7 @@ ul {
 	border-radius: 50%;
 }
 
-.contenedor-mini-m, .contenedor-mini, .contenedor-med, .contenedor-med1, .contenedor-med2, .contenedor, .contenedor-largo, .contenedor-largo-med, .contenedor-largo-med2, .contenedor-largo-max, .contenedor-largo-super-medium, .contenedor-largo-super-medium2, .contenedor-largo-super-max {
+.contenedor-mini-m, .contenedor-mini, .contenedor-med, .contenedor-med1, .contenedor-med2, .contenedor, .contenedor-largo, .contenedor-largo-med, .contenedor-largo-med2, .contenedor-largo-max, .contenedor-largo-super-medium, .contenedor-largo-super-medium2, .contenedor-largo-super-max, .contenedor-largo-super-max2 {
 	margin-top: 20px;
     margin-bottom: 20px;
 	align-items: center;
