--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ------------------------------------------------------------------------------
-  Autor: David Zapico
-  Descripcion: Estilos proyecto web para la asignatura de interfaces. 2DAW.
-
+  	Autor: David Zapico
+  	Descripcion: Estilos proyecto web para la asignatura de interfaces. 2DAW.
+	Pantalla: 2560 x 1600
   _____              _     _   ______           _           
  |  __ \            (_)   | | |___  /          (_)          
  | |  | | __ ___   ___  __| |    / / __ _ _ __  _  ___ ___  
