--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,4 +1,22 @@
-/*PRINT*/
+/* ------------------------------------------------------------------------------
+  	Autor: David Zapico
+  	Descripcion: Estilos print proyecto web para la asignatura de interfaces. 2DAW.
+	Pantalla: 2560 x 1600
+  _____              _     _   ______           _           
+ |  __ \            (_)   | | |___  /          (_)          
+ | |  | | __ ___   ___  __| |    / / __ _ _ __  _  ___ ___  
+ | |  | |/ _` \ \ / / |/ _` |   / / / _` | '_ \| |/ __/ _ \ 
+ | |__| | (_| |\ V /| | (_| |  / /_| (_| | |_) | | (_| (_) |
+ |_____/ \__,_| \_/ |_|\__,_| /_____\__,_| .__/|_|\___\___/ 
+                                         | |                
+                                         |_|   
+
+1. ESTILOS GENERALES
+2. CONTENIDO
+------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------
+1. ESTILOS GENERALES
+------------------------------------------------------------------------------ */
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +26,9 @@ header, footer, #info-box, .next, .linea, iframe {
     display: none;
 }
 
+/* ------------------------------------------------------------------------------
+2. CONTENIDO
+------------------------------------------------------------------------------ */
 img {
     width: 30%;
 }
